--- a/css/styles.css
+++ b/css/styles.css
@@ -90,4 +90,57 @@ header{
     margin-bottom: 70px;
 }
 
+/*ESTILOS MAIN*/
+
+main{
+    padding: 100px;
+}
+
+main .social-icons{
+    display: flex;
+    justify-content: center;
+    margin-top: 40px;
+    list-style: none;
+}
+
+main .social-icons li{
+    margin-left: 8px;
+
+}
+
+main .social-icons .social-icon{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 15px;
+    border-radius: 5px;
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    -ms-border-radius: 5px;
+    -o-border-radius: 5px;
+    width: 100%;
+    height: 100%;
+}
+
+main .social-icons #linkedin{
+    background-color: #0077b0;
+
+}
+main .social-icons #github{
+    background-color: #23272b;
+    
+}
+main .social-icons #platzi{
+    background-color: #121f3d;
+    
+}
+main .social-icons #twitter{
+    background-color: #1da1f2;
+    
+}
+main .social-icons #youtube{
+    background-color: #f70000;
+    
+}
+
 
