--- a/css/styles.css
+++ b/css/styles.css
@@ -82,6 +82,7 @@ header{
 #hero .informacion-contenedor .informacion{
     margin-left: 20px;
     font-weight: bold;
+    width: calc(100% - 200px);
 }
 
 #hero .informacion-contenedor .informacion span{
